--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <div class="middle-container">
         <div class="profile">
             <img class="github-gif" src="images/giphy.gif" alt="github gif">
-            <h2>Hello.</h2>
-            <p class="head-text">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.
+            <h2>Student and Independent Software Developer</h2>
+            <p class="head-text">I am a second-year student at DePaul University studying Computer Science. My emphasis
+                is in Software Development, but I have experience in Web Development and Data Science.
             </p>
         </div>
         <hr class="dotted-hr">
@@ -31,32 +32,34 @@
             <h2>My Skills.</h2>
             <div class="skill-row">
                 <img class="code-gif" src="images/200w.webp" alt="code gif">
-                <h3>Lorem & Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna
-                    lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+                <h3>Languages</h3>
+                <p>I have intermediate experience with Python, JavaScript, React, HTML, and CSS. I have beginner experience with
+                    Java, jQuery, and SQL.
+                </p>
             </div>
             <div class="skill-row">
                 <img class="comp-gif" src="images/computertwo.gif" alt="computer gif">
-                <h3>Lorem Ipsum Dolor</h3>
-                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis
-                    mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                <h3>Other Skills</h3>
+                <p>100+ Words Per Minute Typing Speed. Data Management and Indexing. Abstracting large documents. Customer Service Specialist.</p>
             </div>
         </div>
         <hr class="dotted-hr">
         <div class="contact-me">
             <h2>Get In Touch</h2>
-            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-            <p class="spacer">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-            <a class="btn" href="mailto:jakeopie9@email.com">CONTACT ME</a>
+            <h3>Feel free to reach out about anything.</h3>
+            <p class="spacer">You can email me via the "Contact Me" button, and my LinkedIn, Twitter, and Github profiles are below.</p>
+            <a class="btn" href="mailto:jakeopie9@email.com">Contact Me</a>
         </div>
     </div>
 
 
     <div class="bottom-container">
+        <br>
         <a class="footer-link" href="https://www.linkedin.com/in/jake-opie-992b19218/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/jakeopie9">Twitter</a>
         <a class="footer-link" href="https://github.com/jopieji">Github</a>
-        <p>© 2018 Name Surname.</p>
+        <p>2021 Jake Opie </p>
+        <br>
     </div>
 </body>
 
