new image and fixed header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>I'm Jake.</h1>
         <h2>A programmer</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
-        <img src="images/mountain.png" alt="mountain-image">
+        <img src="images/chicagoSky-removebg-preview.png" alt="skyline-image">
     </div>
     <div class="middle-container">
         <div class="profile">
@@ -29,7 +29,7 @@
         </div>
         <hr class="dotted-hr">
         <div class="skills">
-            <h2>My Skills.</h2>
+            <h2>My Skills</h2>
             <div class="skill-row">
                 <img class="code-gif" src="images/200w.webp" alt="code gif">
                 <h3>Languages</h3>
