made anchors open into new tab

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 
     <div class="bottom-container">
         <br>
-        <a class="footer-link" href="https://www.linkedin.com/in/jake-opie-992b19218/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/jakeopie9">Twitter</a>
-        <a class="footer-link" href="https://github.com/jopieji">Github</a>
+        <a class="footer-link" target="_blank" href="https://www.linkedin.com/in/jake-opie-992b19218/">LinkedIn</a>
+        <a class="footer-link" target="_blank" href="https://twitter.com/jakeopie9">Twitter</a>
+        <a class="footer-link" target="_blank" href="https://github.com/jopieji">Github</a>
         <p>2021 Jake Opie </p>
         <br>
     </div>
