--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Jake Opie</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' href='css/styles.css'>
-    <link rel="icon" href="faviconSakura.ico">
+    <link rel="icon" href="joFaviconTwo.ico">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&family=Roboto&display=swap"
         rel="stylesheet">
 </head>
