update skills to include Git

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="skill-row">
                 <img class="code-gif" src="images/200w.webp" alt="code gif">
                 <h3>Languages</h3>
-                <p>I have intermediate experience with Python, JavaScript, React, HTML, and CSS. I have beginner experience with
+                <p>I have intermediate experience with Python, JavaScript, React, HTML, CSS and Git/Github. I have beginner experience with
                     Java, jQuery, and SQL.
                 </p>
             </div>
