make github pic clickable

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="middle-container">
         <div class="profile">
-            <img class="github-gif" src="images/giphy.gif" alt="github gif">
+            <a href="https://github.com/jopieji" target="_blank"><img class="github-gif" src="images/giphy.gif" alt="github gif"></a>
             <h2>Student and Independent Software Developer</h2>
             <p class="head-text">I am a second-year student at DePaul University studying Computer Science. My emphasis
                 is in Software Development, but I have experience in Web Development and Data Science.
