minor skills and graphical changes

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <body class="body">
     <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+        <!--<img class="top-cloud" src="images/cloud.png" alt="cloud-image">--->
         <h1>I'm Jake.</h1>
         <h2>A programmer</h2>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
+        <!---<img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">--->
         <img src="images/chicagoSky-removebg-preview.png" alt="skyline-image">
     </div>
     <div class="middle-container">
@@ -29,18 +29,18 @@
         </div>
         <hr class="dotted-hr">
         <div class="skills">
-            <h2>My Skills</h2>
+            <h2>Skills</h2>
             <div class="skill-row">
                 <img class="code-gif" src="images/200w.webp" alt="code gif">
                 <h3>Languages</h3>
-                <p>I have intermediate experience with Python, JavaScript, React, HTML, CSS and Git/Github. I have beginner experience with
-                    Java, jQuery, and SQL.
+                <p>I have intermediate experience with Python, JavaScript, Java, HTML/CSS, and Git/Github. I have beginner experience with
+                    jQuery, React, and SQL.
                 </p>
             </div>
             <div class="skill-row">
                 <img class="comp-gif" src="images/computertwo.gif" alt="computer gif">
-                <h3>Other Skills</h3>
-                <p>100+ Words Per Minute Typing Speed. Data Management and Indexing. Abstracting large documents. Customer Service Specialist.</p>
+                <h3>Other Relevant Skills</h3>
+                <p>Familiar with Agile methodologies and workflows. Basic Data Science knowledge. Coursework relevant to Data Structures and Algorithms. Basic knowledge of both AWS and Google Cloud. Basic Figma knowledege. Customer Service Specialist.</p>
             </div>
         </div>
         <hr class="dotted-hr">
