update text and change styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="top-container">
         <!--<img class="top-cloud" src="images/cloud.png" alt="cloud-image">--->
         <h1>I'm Jake.</h1>
-        <h2>A programmer</h2>
+        <h2>A Computer Science Student</h2>
         <!---<img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">--->
         <img src="images/chicagoSky-removebg-preview.png" alt="skyline-image">
     </div>
@@ -40,14 +40,15 @@
             <div class="skill-row">
                 <img class="comp-gif" src="images/computertwo.gif" alt="computer gif">
                 <h3>Other Relevant Skills</h3>
-                <p>Familiar with Agile methodologies and workflows. Basic Data Science knowledge. Coursework relevant to Data Structures and Algorithms. Basic knowledge of both AWS and Google Cloud. Basic Figma knowledege. Customer Service Specialist.</p>
+                <p>Familiar with Agile methodologies and workflows. Basic Data Science knowledge. Coursework relevant to Data Structures and Algorithms. Basic knowledge of both AWS and Google Cloud. Basic Figma knowledege. </p>
             </div>
         </div>
         <hr class="dotted-hr">
         <div class="contact-me">
             <h2>Get In Touch</h2>
-            <h3>Feel free to reach out about anything.</h3>
-            <p class="spacer">You can email me via the "Contact Me" button, and my LinkedIn, Twitter, and Github profiles are below.</p>
+            <h3>Feel free to reach out about anything. </h3>
+            <h3>I provide Python tutoring services for a low rate and for those of all experience levels!</h3>
+            <p class="spacer">You can email me via the "Contact Me" button. My LinkedIn, Twitter, and Github profiles are below.</p>
             <a class="btn" href="mailto:jakeopie9@email.com">Contact Me</a>
         </div>
     </div>
@@ -58,7 +59,7 @@
         <a class="footer-link" target="_blank" href="https://www.linkedin.com/in/jake-opie-992b19218/">LinkedIn</a>
         <a class="footer-link" target="_blank" href="https://twitter.com/jakeopie9">Twitter</a>
         <a class="footer-link" target="_blank" href="https://github.com/jopieji">Github</a>
-        <p>2021 Jake Opie </p>
+        <p>2022 Jake Opie </p>
         <br>
     </div>
 </body>
