add svg styles and remove twitter link

--- a/index.html
+++ b/index.html
@@ -10,18 +10,32 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&family=Roboto&display=swap"
         rel="stylesheet">
 </head>
+<!--<img src="C:\Users\Jake Opie\CoverLetter\layered-waves-haikei.svg" alt="svg"/>-->
 
 <body class="body">
     <div class="top-container">
-        <!--<img class="top-cloud" src="images/cloud.png" alt="cloud-image">--->
+        <div class="svg2">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
+                    opacity=".25" class="shape-fill"></path>
+                <path
+                    d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
+                    opacity=".5" class="shape-fill"></path>
+                <path
+                    d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
+                    class="shape-fill"></path>
+            </svg>
+        </div>
         <h1>I'm Jake.</h1>
         <h2>A Computer Science Student</h2>
-        <!---<img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">--->
         <img src="images/chicagoSky-removebg-preview.png" alt="skyline-image">
     </div>
     <div class="middle-container">
         <div class="profile">
-            <a href="https://github.com/jopieji" target="_blank"><img class="github-gif" src="images/giphy.gif" alt="github gif"></a>
+            <a href="https://github.com/jopieji" target="_blank"><img class="github-gif" src="images/giphy.gif"
+                    alt="github gif"></a>
             <h2>Student and Independent Software Developer</h2>
             <p class="head-text">I am a second-year student at DePaul University studying Computer Science. My emphasis
                 is in Software Development, but I have experience in Web Development and Data Science.
@@ -33,14 +47,17 @@
             <div class="skill-row">
                 <img class="code-gif" src="images/200w.webp" alt="code gif">
                 <h3>Languages</h3>
-                <p>I have intermediate experience with Python, JavaScript, Java, HTML/CSS, and Git/Github. I have beginner experience with
+                <p>I have intermediate experience with Python, JavaScript, Java, HTML/CSS, and Git/Github. I have
+                    beginner experience with
                     jQuery, React, and SQL.
                 </p>
             </div>
             <div class="skill-row">
                 <img class="comp-gif" src="images/computertwo.gif" alt="computer gif">
                 <h3>Other Relevant Skills</h3>
-                <p>Familiar with Agile methodologies and workflows. Basic Data Science knowledge. Coursework relevant to Data Structures and Algorithms. Basic knowledge of both AWS and Google Cloud. Basic Figma knowledege. </p>
+                <p>Familiar with Agile methodologies and workflows. Basic Data Science knowledge. Coursework relevant to
+                    Data Structures and Algorithms. Basic knowledge of both AWS and Google Cloud. Basic Figma
+                    knowledege. </p>
             </div>
         </div>
         <hr class="dotted-hr">
@@ -48,19 +65,32 @@
             <h2>Get In Touch</h2>
             <h3>Feel free to reach out about anything. </h3>
             <h3>I provide Python tutoring services for a low rate and for those of all experience levels!</h3>
-            <p class="spacer">You can email me via the "Contact Me" button. My LinkedIn, Twitter, and Github profiles are below.</p>
+            <p class="spacer">You can email me via the "Contact Me" button. My LinkedIn, Twitter, and Github profiles
+                are below.</p>
             <a class="btn" href="mailto:jakeopie9@email.com">Contact Me</a>
         </div>
+        <a class="link" target="_blank" href="https://www.linkedin.com/in/jake-opie-992b19218/">LinkedIn</a>
+        <!--<a class="link" target="_blank" href="https://twitter.com/jakeopie9">Twitter</a>-->
+        <a class="link" target="_blank" href="https://github.com/jopieji">Github</a>
     </div>
 
 
     <div class="bottom-container">
-        <br>
-        <a class="footer-link" target="_blank" href="https://www.linkedin.com/in/jake-opie-992b19218/">LinkedIn</a>
-        <a class="footer-link" target="_blank" href="https://twitter.com/jakeopie9">Twitter</a>
-        <a class="footer-link" target="_blank" href="https://github.com/jopieji">Github</a>
-        <p>2022 Jake Opie </p>
-        <br>
+        <div class="svgbot">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
+                    opacity=".25" class="shape-fill"></path>
+                <path
+                    d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
+                    opacity=".5" class="shape-fill"></path>
+                <path
+                    d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
+                    class="shape-fill"></path>
+            </svg>
+            
+        </div>
     </div>
 </body>
 
