update skills section

--- a/index.html
+++ b/index.html
@@ -47,17 +47,16 @@
             <div class="skill-row">
                 <img class="code-gif" src="images/200w.webp" alt="code gif">
                 <h3>Languages</h3>
-                <p>I have intermediate experience with Python, JavaScript, Java, HTML/CSS, and Git/Github. I have
-                    beginner experience with
-                    jQuery, React, and SQL.
+                <p>I have intermediate experience with Python, JavaScript, Java, React, and Git/Github. I have
+                    beginner experience with Express.js, MongoDB, and SQL.
                 </p>
             </div>
             <div class="skill-row">
                 <img class="comp-gif" src="images/computertwo.gif" alt="computer gif">
                 <h3>Other Relevant Skills</h3>
-                <p>Familiar with Agile methodologies and workflows. Basic Data Science knowledge. Coursework relevant to
+                <p>Familiar with Agile methodologies and workflows. Coursework relevant to
                     Data Structures and Algorithms. Basic knowledge of both AWS and Google Cloud. Basic Figma
-                    knowledege. </p>
+                    knowledege. Working on become proficient in using Firebase. </p>
             </div>
         </div>
         <hr class="dotted-hr">
